# aframe-babia-components

./: .gitignore  .gitlab-ci.yml  README.md  babia-3dbarchart.js  babia-3dcylinderchart.js  babia-bubbleschart.js  babia-cylinderchart.js  babia-doughnutchart.js  babia-piechart.js  babia-simplebarchart.js  babiaxr-3dbarchart.js  babiaxr-3dcylinderchart.js  babiaxr-bubbleschart.js  babiaxr-codecity.js  babiaxr-cylinderchart.js  babiaxr-debug-data.js  babiaxr-doughnutchart.js  babiaxr-event_controller.js  babiaxr-filterdata.js  babiaxr-interaction-mapper.js  babiaxr-island.js  babiaxr-lookat.js  babiaxr-navigation_bar.js  babiaxr-piechart.js  babiaxr-querier_es.js  babiaxr-querier_github.js  babiaxr-querier_json.js  babiaxr-simplebarchart.js  babiaxr-terrain.js  babiaxr-totem.js  babiaxr-vismapper.js  chartdata.js  cypress.json  debug_data.js  event_controller.js  example-template.html  filterdata.js  geo3dbarchart.js  geo3dcylinderchart.js  geobubbleschart.js  (+27 more)
common/: noti-buffer.js
docs/: CONTRIBUTING.md  EXAMPLE_CREATE_CITY_WORKFLOW.md  HOW_TO_CHARTS.md  HOW_TO_CHARTS_WITH_QUERIER.md  HOW_TO_TIME_EVOLVE_CITY.md  RELEASE_NOTES.md  STACK.md
examples/: entities_hardcoded.html  example-template.html  keyboard_oculus.html
src/: city.html  city.js  debug-data.js  interaction-mapper.js  main.html  main.js  painter.js  querier.js  querier_github.js  querier_json.js  visdata.js  vismapper.js
tests/: 3dbarchart.js  3dcylinderchart.js  __init.test.js  async.js  bars.js  barsmap.js  bubbles.js  bubbleschart.js  buffer.js  city.js  codecity.js  codecity.test.js  cylinderchart.js  cyls.js  cylsmap.js  data.json  data_1.json  data_2.json  debug-data.js  doughnut.js  doughnutchart.js  event-controller.js  filterdata.js  helpers.js  index.html  index.test.js  interaction-mapper.js  island.js  karma.conf.js  navigation-bar.js  network.js  noti-buffer.js  other_snapshots.js  pie.js  piechart.js  querier_es.js  querier_github.js  querier_json.js  rectangle.test.js  simplebarchart.js  (+7 more)
tools/: README.md  graal_codecity.py  (+8 more)
tools/config/: aliases.json  projects.json  setup.cfg
tools/generate_repository_data/utils/config/: projects.json  setup.cfg
(+1925 files in other folders)
