#
# Test config with only git and github activated
#


# Config values format
#
# List: [val1, val2 ...]
# Int: int_value
# Int as string: "Int"
# List as string: "[val1, val2 ...]"
# String: string_value
# None: None, none
# Boolean: true, True, False, false

[general]
short_name = Grimoire
update = false
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
# menu_file = ../menu.yaml
aliases_file = ./config/aliases.json

[projects]
projects_file = ./config/projects.json

[es_collection]
url = http://localhost:9200

[es_enrichment]
url = http://localhost:9200

[sortinghat]
host = 127.0.0.1
user = operator
password = operator
database = test_sh
load_orgs = true
orgs_file = data/orgs_sortinghat.json
identities_api_token = 'xxxx'
identities_file = [data/perceval_identities_sortinghat.json]
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120

[cocom]
raw_index = cocom_chaoss
enriched_index = cocom_chaoss_enrich
category = code_complexity_lizard_repository
# code_complexity_lizard_repository
studies = [enrich_cocom_analysis]
branches = master

[enrich_cocom_analysis]
out_index = cocom_chaoss_study
interval_months = [3]
