[general]
short_name = BabiaXR
update = false
min_update_delay = 10
debug = true
logs_dir = logs
bulk_size = 100
scroll_size = 100
aliases_file = ./utils/config/aliases.json

[projects]
projects_file = ./utils/config/projects.json

[es_collection]
url = http://localhost:9200

[es_enrichment]
url = http://localhost:9200

[cocom]
raw_index = argouml_raw
enriched_index = argouml_enriched
category = code_complexity_lizard_file
studies = [enrich_cocom_analysis]
branches = master

[enrich_cocom_analysis]
out_index = cocom_babiaxr_study_https://github.com/argouml-tigris-org/argouml.git
interval_months = [3]

